fix: overflow css

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 #root {
   text-align: center;
   margin-top: 50px;
-  width: 100vw;
-  min-height: 100vh;
+  width: 100%;
+  min-height: 100%;
   justify-content: center;
-  overflow: hidden;
 }
